# GloMarGridding

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  HadCRUT_ensemble_runner.sh  README.md  config.ini  config_DCENT.ini  config_HadCRUT.ini  config_HadCRUT.yaml  config_TAO.ini  config_mat.yaml  config_stitch.yaml  covariance.py  covariance_calculation.py  covariance_variogram.py  icoads_kriging_main.py  kriging.py  main_DCENT.py  main_HadCRUT.py  main_MAT.py  main_MAT_by_month.py  main_MAT_classic.py  main_TAO_SST.py  main_ice_esa.py  main_ice_metoffice.py  main_monthly.py  noc_helpers.py  observations.py  observations_plus_qc.py  pyproject.toml  requirements.txt  stitch_lsat_sst.py  utils.py
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml  testing-suite.yaml
docs/: Documentation.tex  authors.rst  conf.py  covariance.rst  ellipse.rst  error_covariance.rst  getting_started.rst  index.rst  kriging.rst  misc.rst  users_guide.rst  workflow.rst
ellipse_estimation/: README.md  cube_covariance.py  cube_covariance_nonstationary_stich.py  cube_io_10x10.py  distance_util.py  infill_coasts_and_lakes.py  repair_damaged_covariance.py  simulate_ellipse.py
ellipse_estimation/data/: 19820101_regridded_sst.nc  ecmwf-era5_oper_an_sfc_200001010000.lsm.inv.alternative.nc  ecmwf-era5_oper_an_sfc_200001010000.lsm.inv.nc  world_landmask.nc
ellipse_estimation/run_scripts/ellipse_mle_LSAT/clipping/: clip_lsat_cov.py  clip_lsat_cov.sh  clip_sst_cov.yaml
ellipse_estimation/run_scripts/ellipse_mle_LSAT/coast_lake_pixels_scale_infilling/: infill_coasts_and_lakes.py
ellipse_estimation/run_scripts/ellipse_mle_LSAT/fit_ellipse_fivedegree_monthly/: process_basin_satellite_monthly_climatology_matern_physical_distances_LSAT_Global.sh
ellipse_estimation/run_scripts/ellipse_mle_LSAT/stiching/: API_mask_era_cov_5p0_lsat.py  API_mask_era_cov_5p0_lsat.yaml  API_mask_esa_cov_5p0_lsat.py  cov_generate_lsat.sh
ellipse_estimation/run_scripts/ellipse_mle_SST/clipping/: clip_sst_cov.py  clip_sst_cov.sh  clip_sst_cov.yaml
ellipse_estimation/run_scripts/ellipse_mle_SST/fit_ellipse_fivedegree_monthly/: prep_sst_data.py  process_basin_satellite_monthly_climatology_matern_physical_distances_Global.py  process_basin_satellite_monthly_climatology_matern_physical_distances_Global.yaml  process_basin_satellite_monthly_climatology_matern_physical_distances_SST_Global.sh  sic_check.ipynb
ellipse_estimation/run_scripts/ellipse_mle_SST/stiching/: API_mask_esa_cov_5p0_sst.py  API_mask_esa_cov_5p0_sst.yaml  cov_generate_sst.sh
ellipse_estimation/run_scripts/general/: dcent_error_covariance.py  remap_m180_180_2_0_360.py
ellipse_estimation/run_scripts/general/coast_lake_pixels_scale_infilling/: infill_coasts_and_lakes.py
ellipse_estimation/tests_and_examples/extra_R_scripts/ten_deg_boxes_example/: prep_vg_data.R  read_netR.R  run_10deg.slurm  (+1 more)
ellipse_estimation/tests_and_examples/fit_tests/: fit_ellipse_unit_tests_visualisation.ipynb  plot_global_individual_ellipse_production.py  plot_global_stiched_ellipse_production.py  test_fit_uniform_Lx_Ly_theta.ipynb
ellipse_estimation/tests_and_examples/math_tests/: faster_haversine.ipynb
ellipse_estimation/tests_and_examples/stich_tests/: test_hfix.nc  test_stich.ipynb  test_stich.py  test_stich_multicpus.ipynb  test_stich_multicpus.py
ellipse_estimation/tests_and_examples/test_data/: .gitignore  Global_With_Poles_01_1.0_85.5.nc  Lx1300_Ly1100_45deg_1p5.nc  Lx1300_Ly1100_unrotated_1p5.nc  Lx1500_Ly1000_45deg_1p5.nc  Lx1500_Ly1000_unrotated_1p5.nc  blank_cube.nc  constant_1000_unrotated_0p5.nc  constant_1000_unrotated_1p5.nc  variable_scales_1p5_fixed_sdev_fixed_angle.nc  variable_scales_1p5_variable_sdev_fixed_angle.nc  variable_scales_1p5_variable_sdev_variable_angle.nc
ellipse_estimation/unit_tests/: compute_distance_unit_tests.py  fit_ellipse_unit_tests.py  fit_ellipse_unit_tests_variable_parms.py  simulate_ellipse_unit_tests.py
example_notebooks/: error_covariance_contents.ipynb
glomar_gridding/: __init__.py  array.py  climatology.py  constants.py  covariance.py  covariance_calculation.py  covariance_cube.py  covariance_tools.py  covariance_variogram.py  distances.py  ellipse.py  ellipse_builder.py  ellipse_covariance.py  error_covariance.py  grid.py  interpolation_covariance.py  io.py  kriging.py  mask.py  observations.py  observations_plus_qc.py  perturbation.py  stochastic.py  types.py  utils.py  variogram.py
glomar_gridding/ellipse/: __init__.py  covariance.py  estimate.py  model.py
glomar_gridding/matern_and_tm/: __init__.py  matern_tau.py
matern_and_tm/: matern_tau.py
noc_kriging/: covariance.py  covariance_calculation.py  covariance_variogram.py  kriging.py  observations_plus_qc.py  simple_plots.py  utils.py
noc_kriging/matern_and_tm/: matern_tau.py
noc_runners/: HadCRUT_ensemble_runner.sh  config_HadCRUT.yaml  config_TAO.ini  config_mat.yaml  config_stitch.yaml  ellipse_parameter_estimation.py  main_DCENT.py  main_HadCRUT.py  main_MAT.py  main_MAT_by_month.py  main_TAO_SST.py  main_ice_esa.py  main_ice_metoffice.py  main_monthly.py  noc_helpers.py  stitch_lsat_sst.py
notebooks/: Ellipse_to_grid.ipynb  HadCRUT.5.0.2.0.error_covariance.187603.nc  HadCRUT.5.0.2.0.error_covariance.2014_03.nc  HadCRUT.5.0.2.0.uncorrelated_1876_03.nc  HadCRUT.5.0.2.0.uncorrelated_1877_12.nc  HadCRUT.5.0.2.0.uncorrelated_2014_03.nc  HadSST.4.0.1.0_ensemble_member_123_1877_12.nc  HadSST.4.0.1.0_ensemble_member_71_2014_03.nc  HadSST.4.0.1.0_ensemble_member_94_1876_03.nc  HadSST.4.0.1.0_error_covariance.187712.nc  esa_cci_sst_5deg_monthly_1982-2022_03.nc
test/: fit_ellipse_unit_tests.py  test_clipping.py  test_covariance_tools.py  test_distances.py  test_distances_ellipse_estimation.py  test_ellipse.py  test_ellipse_covariance.py  test_error_cov.py  test_fit_ellipse.py  test_fit_ellipse_variable_scales.py  test_grid.py  test_io.py  test_kriging.py  test_matrix.py  test_simulate_ellipse.py  test_utils.py  test_variogram.py
test/data/: Atlantic_Ocean_07.nc  cov_no_hfix.nc
(+4 files in other folders)
