[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "setuptools_scm_git_archive",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["noc_kriging"]

[project]
name = "NOCKriging"
version = "0.1.0"
dependencies = [
  "numpy<2",
  "pandas",
  "geopandas",
  "xarray",
  "netCDF4<1.7",
  "matplotlib",
  "Cartopy",
  "scipy",
  "scikit-learn",
  "tqdm",
  "PyCOADS @ git+ssh://git@git.noc.ac.uk/josidd/pycoads.git",
]
requires-python = ">=3.11"
authors = [
  { name = "Agnieszka Faulkner", email = "agfaul@noc.ac.uk" },
  { name = "Richard Cornes", email = "rcornes@noc.ac.uk" },
  { name = "Steven Chan", email = "stchan@noc.ac.uk" },
  { name = "Joseph Siddons", email = "josidd@noc.ac.uk" },
]
maintainers = [
  { name = "Agnieszka Faulkner", email = "agfaul@noc.ac.uk" },
  { name = "Steven Chan", email = "stchan@noc.ac.uk" },
  { name = "Joseph Siddons", email = "josidd@noc.ac.uk" },
]
description = "National Oceanography Centre library for performing kriging."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
  "kriging",
  "ordinary",
  "simple",
  "interpolation",
  "covariance",
  "observations",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
extra = ["ipykernel"]
all = ["ipykernel"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"
exclude = [".eggs", ".git", ".venv", "build", "venv"]

[tool.ruff.lint]
extend-select = [
  "RUF022", # unsorted-dunder-all
]
ignore = [
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
]
preview = true
select = [
  "C90",  # mccabe-complexity
  "D",    # docstrings
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "N802", # invalid-function-name
  "S",    # bandit
  "W",    # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "double"            # Like Black, use double quotes for strings.
indent-style = "space"            # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto"              # Like Black, automatically detect the appropriate line ending.

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-import-conventions.aliases]
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
polars = "pl"
scipy = "sp"
xarray = "xr"
netCDF4 = "nc"

[project.urls]
Repository = "https://git.noc.ac.uk/nocsurfaceprocesses/noc_kriging.git"
