[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "setuptools_scm_git_archive",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["glomar_gridding"]

[project]
name = "GloMarGridding"
version = "0.2.1"
dependencies = [
  "Cartopy",
  "geopandas",
  "matplotlib",
  "netCDF4",
  "numpy",
  "pandas",
  "polars",
  "pyarrow",
  "scikit-learn",
  "scipy",
  "tqdm",
  "xarray",
]
requires-python = ">=3.11"
authors = [
  { name = "Agnieszka Faulkner", email = "agfaul@noc.ac.uk" },
  { name = "Richard Cornes", email = "rcornes@noc.ac.uk" },
  { name = "Steven Chan", email = "stchan@noc.ac.uk" },
  { name = "Joseph Siddons", email = "josidd@noc.ac.uk" },
]
maintainers = [
  { name = "Agnieszka Faulkner", email = "agfaul@noc.ac.uk" },
  { name = "Steven Chan", email = "stchan@noc.ac.uk" },
  { name = "Joseph Siddons", email = "josidd@noc.ac.uk" },
]
description = "National Oceanography Centre library for performing gridding."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
  "gridding",
  "kriging",
  "ordinary",
  "simple",
  "interpolation",
  "covariance",
  "observations",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
scripts = ["numba>=0.60.0", "pycoads", "numpy<2.1.0"]
extra = ["ipykernel"]
all = ["ipykernel", "pycoads", "numba>=0.60.0", "numpy<2.1.0"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"
exclude = [".eggs", ".git", ".venv", "build", "venv"]

[tool.ruff.lint]
extend-select = [
  "RUF022", # unsorted-dunder-all
]
ignore = [
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  "D105", # missing docstring in magic method
]
preview = true
select = [
  "C90",  # mccabe-complexity
  "D",    # docstrings
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "N802", # invalid-function-name
  "S",    # bandit
  "W",    # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["D100", "D101", "D102", "D103"]
"test/**/*test*.py" = ["D100", "D101", "D102", "D103", "N802", "S101", "S311"]
"notebooks/*.ipynb" = ["D100", "D101", "D102", "D103", "N802", "S101", "S311"]

[tool.ruff.format]
quote-style = "double"            # Like Black, use double quotes for strings.
indent-style = "space"            # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto"              # Like Black, automatically detect the appropriate line ending.

[tool.uv.sources]
pycoads = { git = "ssh://git@git.noc.ac.uk/josidd/pycoads.git" }

[tool.pytest]
python_files = "test_*.py"
testpaths = ["./tests"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-import-conventions.aliases]
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
polars = "pl"
scipy = "sp"
xarray = "xr"
netCDF4 = "nc"

[project.urls]
Repository = "https://git.noc.ac.uk/nocsurfaceprocesses/glomar_gridding.git"

[dependency-groups]
dev = ["bpython>=0.24", "ipykernel>=6.29.5", "pytest>=8.3.4"]
